# fastcampus-chatgpt-intro-frameworks

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.md
part02/_ui/: app.py
part02/chapter03/: generation_1.py  generation_2.py  generation_3.py  generation_4.py
part04/: sample_text.txt
part05/_ui/: gen1_app.py  gen2_app.py
part05/ch02_prompts/: 1_extract_idea.txt  2_write_outline.txt  3_write_plot.txt  4_develop_character.txt  5_develop_world.txt  6_write_chapter.txt
part05/ch03_no_framework/gen1/: api.py
part05/ch03_no_framework/gen2/: api.py
part05/ch04_langchain/gen1/: api.py  prompt_template.txt
part05/ch04_langchain/gen2/: api.py
part05/ch05_semantic_kernel/gen1/: api.py
part05/ch05_semantic_kernel/gen2_1/: api.py
part05/ch05_semantic_kernel/gen2_2/: api.py
part05/ch05_semantic_kernel/gen2_3/: api.py
part06/ch02/prompts/: bug_analyze.txt  bug_request_context.txt  bug_say_sorry.txt  bug_solution.txt  enhancement_say_thanks.txt  parse_intent.txt
part06/ch03_langchain/gen1/: api.py  prompt_template.txt
part06/ch03_langchain/gen2/: api_custom.py  api_multi_prompt.py  custom_chains.py
part06/ch03_langchain/gen3/: api.py
part06/ch04_semantic_kernel/gen1/: api.py
part06/ch04_semantic_kernel/gen2/: api.py
part06/ch04_semantic_kernel/gen3/: api.py  init_kernel.py
part07/_ui/: app.py  app_with_memory.py
part07/ch03_langchain/gen3/: api.py  chains.py
part07/ch03_langchain/gen3_add_memory/: api.py  chains.py  memory.py
part07/ch04_semantic_kernel/gen3/: api.py
part07/ch04_semantic_kernel/gen3_add_memory/: api.py  (+1 more)
(+68 files in other folders)
