[tool.poetry]
name = "fastcampus-intro-framework"
version = "0.0.1.dev"
description = ""
authors = ["Joowon, Kim"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9.13"
openai = "^0.27.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
google-search-results = "^2.4.2"
markdown = "^3.4.3"
nbformat = "^5.9.1"
bs4 = "^0.0.1"
pandas = "^2.0.3"
unstructured = "^0.8.1"
tiktoken = "^0.4.0"
pip = "^23.2.1"
install = "^1.3.5"
google-api-python-client = "^2.95.0"
protobuf = "^4.23.4"
langchain = "^0.0.250"
semantic-kernel = "^0.3.5.dev0"
fastapi = "0.99.1"
chromadb = "^0.4.4"
streamlit = "^1.25.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
black = {version = "^23.1.0", allow-prereleases = true}
ipykernel = "^6.21.1"
pytest = "7.2.0"
ruff = "^0.0.257"
pytest-asyncio = "^0.21.0"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
